--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <center>
-        <img width="40%" src="nptel certificate.png" alt="Ecertificate">
+        <img width="40%" src="prashant.png" alt="Ecertificate">
     </center>
 </body>
 </html>
